--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   box-sizing: border-box;
 }
 *, *:before, *:after {
@@ -16,7 +16,7 @@ body { margin: 0; }
   flex: 1 1 50%;
   /* flex: 50% 1 1; */
 }
-#editor {
+/* #editor {
   font-family: monospace;
   padding: .5em;
   background: #444;
@@ -25,4 +25,4 @@ body { margin: 0; }
 canvas { 
   width: 100%;
   height: 100%;
-}
+} */ 
